--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A complete school mangement system made on - Django Rest Framework &amp; ReactJs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development ./frontend/src/index.js --output ./frontend/static/frontend/main.js",
+    "build": "webpack --mode production ./frontend/src/index.js --output ./frontend/static/frontend/main.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,17 @@
     "url": "https://github.com/tuhin18003/School-Management/issues"
   },
   "homepage": "https://github.com/tuhin18003/School-Management#readme",
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
   "devDependencies": {
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   }
