--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ autopep8 = "*"
 
 [packages]
 django = "*"
-django-rest-framework = "*"
+djangorestframework = "*"
 django-rest-knox = "*"
 
 [requires]
